static routes up properly

--- a/sparewall/public/css/app.css
+++ b/sparewall/public/css/app.css
@@ -1,1 +1,5 @@
-body{background-color:lightblue; font-family: sans-serif; background-image: url('http://ecoopportunity.net/wp-content/uploads/2011/08/Gunslinger.jpg'); text-align:center;}
+body{
+  background-color:lightblue; 
+  font-family: sans-serif; 
+  text-align:center;
+  }
