added users models and views...now to link them togther with walls

--- a/sparewall/views/layout.erb
+++ b/sparewall/views/layout.erb
@@ -17,10 +17,12 @@
       <li><a href="/walls">SpareWalls</a></li>
       <li><a href="#">Decorated Walls</a></li>
       <li><a href="/walls/new">Does your wall need color?</a></li>
+      <span></span>
+      <li><a href="/users">See users</a></li>
+      <li><a href="/users/new">Sign Up</a></li>
     </ul>
   </nav>
 </header>
-
 
 <%= yield %>
 </body>
