--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">ghost_app</a>
+            <a class="navbar-brand" href="/">SpareWall</a>
           </div>
 
 
