--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -7,8 +7,28 @@
     <input name="user[username]" type="text" class="form-control" id="username" placeholder="Username" value="<%= @user.username %>">
   </div>
   <div class="form-group">
-    <label for="email">Email address</label>
+    <label for="first_name">first name</label>
+    <input name="user[first_name]" type="text" class="form-control" id="first_name" placeholder="first name" value="<%= @user.first_name %>">
+  </div>
+  <div class="form-group">
+    <label for="last_name">last name</label>
+    <input name="user[last_name]" type="text" class="form-control" id="last_name" placeholder="last name" value="<%= @user.last_name %>">
+  </div>
+  <div class="form-group">
+    <label for="password">password</label>
+    <input name="user[password]" type="password" class="form-control" id="password" placeholder="enter new password" value="<%= @user.password %>">
+  </div>
+  <div class="form-group">
+    <label for="email">email address</label>
     <input name="user[email]" type="email" class="form-control" id="email" placeholder="Email" value="<%= @user.email %>">
+  </div>
+  <div class="form-group">
+    <label for="image">image</label>
+    <input name="user[image]" type="text" class="form-control" id="image" placeholder="image" value="<%= @user.image %>">
+  </div>
+  <div class="form-group">
+    <label for="bio">bio</label>
+    <input name="user[bio]" type="text" class="form-control" id="bio" placeholder="bio" value="<%= @user.bio %>">
   </div>
   <button type="submit" class="btn btn-default">Edit</button>
 </form>
