added groundwork for walls routes

--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="media-body">
         <a href="/walls/<%= wall.id %>">
-          <h4 class="media-heading"><%= wall.image_before %></h4>
+          <img src="<%= wall.image %>" width="440px">
         </a>
         <%= wall.location %>
       </div>
