index wall view up

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -10,7 +10,8 @@
 <p>user_type: <%= @user.email %></p>
 <p>bio: <%= @user.bio %></p>
 
-<p>walls: <%= @user.walls %></p>
+<p>my walls: <%= @user.walls %></p>
+<p> add a contact me button here </p>
 
 
 
