--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -11,4 +11,4 @@
 <p>artist</p>
 
 <p>my artist and owner! (link profile pics to both here):</p>
-<p> add a contact me button here </p>
+<p> add a paint me button here which  </p>
