tried adding google maps, although not successful just yet. committing nonetheless

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,7 @@
 <head>
   <%= css :application %>
   <%= js :application %>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
 </head>
   <body>
     <header>
