--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -1,4 +1,4 @@
-<h2>All Walls</h2>
+<h2>all walls</h2>
 <ul class="media-list">
   <% @walls.each do |wall| %>
     <li class="media">
@@ -15,3 +15,6 @@
     </li>
   <% end %>
 </ul>
+
+
+<div id="map"></div><br>
