--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -1,3 +1,13 @@
 body {
   background-color: lightblue;
 }
+
+#map {
+  height: 300px;
+  width: 600px;
+  display:auto;
+  margin: 0 auto;
+  border:5px solid #553EA1;
+  border-radius: 5px;
+
+}
