--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
 body { background-color: lightblue; }
 
+#map { height: 300px; width: 600px; display: auto; margin: 0 auto; border: 5px solid #553EA1; border-radius: 5px; }
+
 /*# sourceMappingURL=style.css.map */
