about static route setup

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -7,7 +7,7 @@
 <p>full name: <%= @user.first_name %> <%= @user.last_name %></p>
 
 <p>email: <%= @user.email %></p>
-<p>user_type: <%= @user.email %></p>
+<p>user_type: <%= @user.user_type %></p>
 <p>bio: <%= @user.bio %></p>
 
 <p>my walls: <%= @user.walls %></p>
