--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,12 +26,20 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              
+
+
+
+
+
+
 
 
               <% if is_logged_in? %>
+
               <li><a href="/users">users</a></li>
               <li><a href="/walls">sparewalls</a></li>
+              <li><a href="/completed_walls">completed walls</a></li>
+
               <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
