--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -15,8 +15,10 @@
         <a href="/users/<%= user.id %>">
           <h4 class="media-heading"><%= user.username %></h4>
         </a>
-        <%= user.email %>
+        <%= user.user_type %>
       </div>
     </li>
   <% end %>
 </ul>
+
+
