--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -11,4 +11,6 @@
 <p>artist</p>
 
 <p>my artist and owner! (link profile pics to both here):</p>
-<p> add a paint me button here which  </p>
+<p> add a paint me button here which sets the artist_id field of wall table to the current user. will only work once logic is in place which shows artist/owners diff pages - so efffectivly only artists can click </p>
+
+
