testing out grid system

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,7 +30,7 @@
 
 
 
-
+            <li><a href="/about">about</a></li>
 
 
 
@@ -50,8 +50,8 @@
                   </li>
 
               <% else %>
-              <li><a href="/register">Register</a></li>
-              <li><a href="/login">Login</a></li>
+              <li><a href="/register">register</a></li>
+              <li><a href="/login">login</a></li>
               <% end %>
 
             </ul>
