--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -1,7 +1,6 @@
-<h1>homepage - consider page layout here</h1>
-
 <div class="jumbotron">
   <h1>welcome to sparewall</h1>
-  <p>this is a friendly place which connects people who have spare walls in need of color and artists that wanna paint. no money is exchanged here; this place runs on good vibes. find out more below </p>
-  <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more</a></p>
+  <p>this is a friendly place which connects people who have spare walls in need of color and artists that wanna paint. no money is exchanged here; this place runs on good vibes. find out more below. this is just a placeholder - consider real style later on </p>
+  <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/register" role="button">sign up</a></p>
 </div>
