--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: lightblue;
+  background-color: #FCFCFC;
 }
 
 #map {
@@ -11,3 +11,10 @@ body {
   border-radius: 5px;
 
 }
+
+.navbar {
+  background-color: #464655;
+  color: #00A676;
+}
+
+// class="navbar navbar-default">
