--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -1,20 +1,30 @@
-<h2>all walls</h2>
-<ul class="media-list">
-  <% @walls.each do |wall| %>
-    <li class="media">
-      <div class="media-left">
-        <a href="/walls/<%= wall.id %>">
-        </a>
-      </div>
-      <div class="media-body">
-        <a href="/walls/<%= wall.id %>">
-          <img src="<%= wall.image %>" width="440px">
-        </a>
-        <%= wall.location %>
-      </div>
-    </li>
-  <% end %>
-</ul>
+<div class="container-fluid">
 
+<h1>all walls</h1>
+
+<div class="row">
+  <% @walls.each do |wall| %>
+  <div class="col-md-6">
+      <ul class="media-list">
+        <li class="media">
+          <div class="media-left">
+            <a href="/walls/<%= wall.id %>">
+            </a>
+          </div>
+          <div class="media-body">
+            <a href="/walls/<%= wall.id %>">
+              <img src="<%= wall.image %>" width="440px">
+            </a>
+            <%= wall.location %>
+          </div>
+        </li>
+        </ul>
+      </div>
+  <% end %>
+<!-- </ul> -->
+</div>
+
+
+</div>
 
 <div id="map"></div><br>
