--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -43,9 +43,9 @@
               <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="/users/<%= current_user.id %>">Profile</a></li>
-                      <li><a href="/users/<%= current_user.id %>/edit">Edit Profile</a></li>
-                      <li><a href="/logout">Logout</a></li>
+                      <li><a href="/users/<%= current_user.id %>">profile</a></li>
+                      <li><a href="/users/<%= current_user.id %>/edit">edit profile</a></li>
+                      <li><a href="/logout">logout</a></li>
                     </ul>
                   </li>
 
