--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,24 +1,33 @@
+<div class="container-fluid">
+
 <h2>All Users</h2>
-<ul class="media-list">
-  <% @users.each do |user| %>
-    <li class="media">
-      <div class="media-left">
-        <a href="/users/<%= user.id %>">
-          <% if user.image %>
-            <img class="media-object" src="<%= user.image %>" alt="<%= user.username %>'s image">
-          <% else %>
-            <img class="media-object" src="/images/default.png" alt="<%= user.username %>'s image">
-          <% end %>
-        </a>
-      </div>
-      <div class="media-body">
-        <a href="/users/<%= user.id %>">
-          <h4 class="media-heading"><%= user.username %></h4>
-        </a>
-        <%= user.user_type %>
-      </div>
-    </li>
-  <% end %>
-</ul>
+
+  <div class="row">
+  <ul class="media-list">
+    
+      <% @users.each do |user| %>
+        <li class="media">
+          <div class="media-left">
+            <a href="/users/<%= user.id %>">
+              <% if user.image %>
+                <img class="media-object img-rounded" src="<%= user.image %>" alt="<%= user.username %>'s image">
+              <% else %>
+                <img class="media-object" src="/images/default.png" alt="<%= user.username %>'s image">
+              <% end %>
+            </a>
+          </div>
+          <div class="media-body">
+            <a href="/users/<%= user.id %>">
+              <h4 class="media-heading"><%= user.username %></h4>
+            </a>
+            <%= user.user_type %>
+        </li>
+      <% end %>
+    </div>
+  </ul>
+
+  </div>
+
+</div>
 
 
