added functionality in navbar to selectively change waht user sees depending on whether they are artist or owner

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -11,7 +11,7 @@
 <p>bio: <%= @user.bio %></p>
 
 <p>my walls: <%= @user.walls %></p>
-<p> add a contact me button here </p>
+<p> add a contact me section which sends an email to the user email add </p>
 
 
 
