--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,18 +28,20 @@
             <ul class="nav navbar-nav navbar-right">
 
 
-
-
             <li><a href="/about">about</a></li>
-
-
-
+          
               <% if is_logged_in? %>
 
-              <li><a href="/users">users</a></li>
-              <li><a href="/walls">sparewalls</a></li>
-              <li><a href="/completed_walls">completed walls</a></li>
+                <% if current_user.user_type == "artist" %>
+                
+                  <li><a href="/walls">sparewalls</a></li>
+                  <li><a href="/completed_walls">completed walls</a></li>
+                <% else %>
+                  <li><a href="/users">users</a></li>
+                  <li><a href="/completed_walls">completed walls</a></li>
+              <% end %>  
 
+    
               <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
