--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -5,12 +5,15 @@
   <img class="media-object" src="/images/default.png" alt="<%= @wall.title %>'s image">
 <% end %>
 
-<p>bio: <%= @wall.location %></p>
+<br><br>
+<p>location: <%= @wall.location %></p>
 
-<p>wall owner </p>
+<p><strong> <a href="/users/<%= @wall.owner_id %>">find out more about the owner</a></strong></p>
 <p>artist</p>
 
-<p>my artist and owner! (link profile pics to both here):</p>
+<p>my artist and owner! (link profile pics to both here): <%= @wall.owner_id %></p>
 <p> add a paint me button here which sets the artist_id field of wall table to the current user. will only work once logic is in place which shows artist/owners diff pages - so efffectivly only artists can click </p>
+
+<p>show wall owner and have a link to their email / email them</p>
 
 
