added functionality to display a wallowners walls on their page

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -14,4 +14,11 @@
 <p> add a contact me section which sends an email to the user email add </p>
 
 
+<% @user.owned_walls.each do |wall| %>
+  <%= wall.title %>
+  <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
+<% end %>
+
+
+
 
