eidted wall new form

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,7 +36,7 @@
                   <li><a href="/walls">sparewalls</a></li>
                   <li><a href="/completed_walls">completed walls</a></li>
                 <% else %>
-                  <li><a href="/users">users</a></li>
+                  <li><a href="/users">artists</a></li>
                   <li><a href="/completed_walls">completed walls</a></li>
               <% end %>  
 
