--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,10 +1,11 @@
 <div class="container-fluid">
 
-<h2>All Users</h2>
+<h2>artists</h2>
 
-  
-    
+
       <% @users.each do |user| %>
+
+     
 
       <div class="row">
       <ul class="media-list">
@@ -27,6 +28,7 @@
           </div>
         </ul>
 
+     
 
       <% end %>
    
