edited users view

--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -5,7 +5,7 @@
 
       <% @users.each do |user| %>
 
-     
+      <% if user.user_type == "artist" %>
 
       <div class="row">
       <ul class="media-list">
@@ -28,7 +28,7 @@
           </div>
         </ul>
 
-     
+      <% end %>
 
       <% end %>
    
