--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -15,13 +15,19 @@
 <p><a href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></p>
 
 
+<% if current_user.user_type == "wall_owner" %>
 <p><a href="/walls/new">Add a new wall</a></p>
+<% end %>
+
 
 <% @user.owned_walls.each do |wall| %>
   <%= wall.title %>
   <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
 <% end %>
 
-
-
+<p>see my walls</p>    
+<% @user.painted_walls.each do |wall| %>
+  <%= wall.title %>
+  <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
+<% end %>
 
