--- a/app/views/walls/completed_walls.erb
+++ b/app/views/walls/completed_walls.erb
@@ -1,7 +1,44 @@
-<h1>completed walls area</h1>
+<div class="container-fluid">
 
-<p>logic required to determine if is_painted field is true (when paint me button clicked) then only is displayed here</p>
 
-<p>left/right arrows to cycle through completed walls. would be awesome to have cards which when howvered on revealed more info. click on wall to take you to its full page (walls/show)</p>
+  <h1>completed walls area</h1>
 
-<img src = "http://amusingearth.com/wp-content/uploads/2014/06/Street-Art-Masterpieces-20.jpg" width="1000px">
+  <p>logic required to determine if is_painted field is true (when paint me button clicked) then only is displayed here</p>
+
+  <p>left/right arrows to cycle through completed walls. would be awesome to have cards which when howvered on revealed more info. click on wall to take you to its full page (walls/show)</p>
+
+  <img src = "http://amusingearth.com/wp-content/uploads/2014/06/Street-Art-Masterpieces-20.jpg" width="500px">
+
+
+    <div class="row">
+      <% @walls.each do |wall| %>
+
+
+        <% if !!(wall.owner_id.present? && wall.artist_id.present?) %>
+
+          <div class="col-md-6">
+              <ul class="media-list">
+                <li class="media">
+                  <div class="media-left">
+                    <a href="/walls/<%= wall.id %>">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <a href="/walls/<%= wall.id %>">
+                      <img src="<%= wall.image %>" width="440px">
+                    </a>
+                  </div>
+                </li>
+                </ul>
+              </div>
+
+        <% end %>
+
+      <% end %>
+    <!-- </ul> -->
+    </div>
+
+
+</div>
+
+<div id="map"></div><br>
