mvp is in place. self high five

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -51,6 +51,7 @@
                   </li>
 
               <% else %>
+              <li><a href="/completed_walls">completed walls</a></li>
               <li><a href="/register">register</a></li>
               <li><a href="/login">login</a></li>
               <% end %>
