basic basic google map implemented

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,7 +5,7 @@
 <head>
   <%= css :application %>
   <%= js :application %>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= gmap_key %>"></script>
 </head>
   <body>
     <header>
