--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -2,19 +2,30 @@ body {
   background-color: #FCFCFC;
 }
 
-#map {
-  height: 300px;
-  width: 600px;
-  display:auto;
-  margin: 0 auto;
-  border:5px solid #553EA1;
-  border-radius: 5px;
+// #map {
+//   height: 300px;
+//   width: 600px;
+//   display:auto;
+//   margin: 0 auto;
+//   border:5px solid #553EA1;
+//   border-radius: 5px;
 
-}
+// }
 
 .navbar {
   background-color: #464655;
   color: #00A676;
 }
+
+
+#property-map {
+  height: 600px;
+  margin: 20px 0;
+}
+
+
+
+
+
 
 // class="navbar navbar-default">
