adding to google maps

--- a/app/views/walls/indexmap.erb
+++ b/app/views/walls/indexmap.erb
@@ -1,1 +1,7 @@
-<h1>placeholder if diff view required for showing sparewals. not used atm</h1>
+<div class="container-fluid">
+<h1>see where the sparewalls are</h1>
+
+<input type="hidden" name="walls-data" value= '<%= @walls.to_json %>'>
+
+  <div id="property-map"></div>
+</div>
