--- a/app/views/walls/new.erb
+++ b/app/views/walls/new.erb
@@ -1,6 +1,6 @@
 <h2>add a wall</h2>
 
-<form id="new" method="post" action="/walls">
+<form id="walls" method="post" action="/walls">
   
   <div class="form-group">
   <div class="form-group">
@@ -22,4 +22,5 @@
 
   <button type="submit" class="btn btn-default">create wall</button>
 </form>
+
 
