--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -34,6 +34,7 @@
 
                 <% if current_user.user_type == "artist" %>
                   <li><a href="/walls">sparewalls</a></li>
+                  <li><a href="/wallsmap">see map</a></li>
                   <li><a href="/completed_walls">completed walls</a></li>
                 <% else %>
                   <li><a href="/users">artists</a></li>
