--- a/app/views/walls/edit.erb
+++ b/app/views/walls/edit.erb
@@ -1,5 +1,5 @@
 <h2>edit walls</h2>
-<form id="edit" method="post" action="/walls/<%= @wall.id %>">
+<form id="walls" method="post" action="/walls/<%= @wall.id %>">
   <input type="hidden" name="_method" value="put">
   <div class="form-group">
   <div class="form-group">
