another one bites the dust

--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -18,7 +18,7 @@
               <a href="/walls/<%= wall.id %>">
                 <img src="<%= wall.image %>" width="440px">
               </a>
-              <%= wall.location %>
+              <%= wall.city %>
             </div>
           </li>
           </ul>
