--- a/app/views/walls/new.erb
+++ b/app/views/walls/new.erb
@@ -8,8 +8,16 @@
     <input name="wall[title]" type="text" class="form-control" id="title" placeholder="title" value="<%= @wall.title %>">
   </div>
   <div class="form-group">
-    <label for="location">location</label>
-    <input name="wall[location]" type="text" class="form-control" id="location" placeholder="location">
+    <label for="city">city</label>
+    <input name="wall[city]" type="text" class="form-control" id="city" placeholder="city">
+  </div>
+  <div class="form-group">
+    <label for="lat">lat</label>
+    <input name="wall[lat]" type="text" class="form-control" id="lat" placeholder="lat">
+  </div>
+  <div class="form-group">
+    <label for="lng">lng</label>
+    <input name="wall[lng]" type="text" class="form-control" id="lng" placeholder="lng">
   </div>
   <div class="form-group">
     <label for="image">image</label>
