--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <br><br>
-<p>location: <%= @wall.location %></p>
+<p>location: <%= @wall.city %></p>
 
 
 <p><strong> wall belongs to owner of ID: <%=@wall.owner_id %> <a href="/users/<%= @wall.owner_id %>">find out more about the owner</a></strong></p>
