--- a/app/views/authentications/new.erb
+++ b/app/views/authentications/new.erb
@@ -43,8 +43,13 @@
 
   <div class="form-group">
     <label for="user_type">user_type</label>
-    <input name="user[user_type]" type="text" class="form-control" id="user_type" placeholder="are you an artist or a wall_owner?">
+
+
+    <input type="radio" name="user[user_type]" value="artist"> artist <br>
+    <input type="radio" name="user[user_type]" value="wall_owner"> wall owner<br>
+
   </div>
 
   <button type="submit" class="btn btn-default">Sign Up</button>
 </form>
+
