--- a/app/views/authentications/new.erb
+++ b/app/views/authentications/new.erb
@@ -8,7 +8,7 @@
 <form id="register" method="post" action="/register">
   <div class="form-group">
     <label for="username">username</label>
-    <input name="user[username]" type="text" class="form-control" id="username" placeholder="Username">
+    <input name="user[username]" type="text" class="form-control" id="username" placeholder="username">
   </div>
 
   <div class="form-group">
@@ -42,10 +42,10 @@
   </div>
 
   <div class="form-group">
-    <label for="user_type">user_type</label>
+    <label for="user_type">which type of user are you?</label><br>
 
 
-    <input type="radio" name="user[user_type]" value="artist"> artist <br>
+    <input type="radio" name="user[user_type]" value="artist"> artist
     <input type="radio" name="user[user_type]" value="wall_owner"> wall owner<br>
 
   </div>
