--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -19,4 +19,10 @@
 
 <% if current_user.user_type == "wall_owner" %>
 <p><strong><a href="/walls/<%=@wall.id %>/edit">edit/update this wall</a></strong></p>
+
+
+  <form method="post" action="/walls/<%= @wall.id %>/delete">
+    <button>delete</button>
+  </form>
+
 <% end %>
