--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -2,6 +2,12 @@
 
 <h1>spare walls</h1>
 
+<form id="search-form" class="form-inline" action="/walls">
+  <input type="text" name="search" placeholder="Search" value="<%= params[:search] %>" class="form-control">
+  <button class="btn btn-primary" id="search_button">Go</button>
+  <a href="/walls" class="btn btn-primary" role="button" id="back_search_button"> Back to all walls </a>
+</form>
+
 <div class="row">
   <% @walls.each do |wall| %>
 
