--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -30,9 +30,15 @@
     <label for="bio">bio</label>
     <input name="user[bio]" type="text" class="form-control" id="bio" placeholder="bio" value="<%= @user.bio %>">
   </div>
+
+
   <div class="form-group">
-    <label for="user_type">user_type</label>
-    <input name="user[user_type]" type="text" class="form-control" id="user_type" placeholder="user_type" value="<%= @user.user_type %>">
+    <label for="user_type">which type of user are you?</label><br>
+    <input type="radio" name="user[user_type]" value="artist"> artist
+    <input type="radio" name="user[user_type]" value="wall_owner"> wall owner<br>
+
   </div>
+
+
   <button type="submit" class="btn btn-default">edit</button>
 </form>
