--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,13 +1,13 @@
-<h2><%= @user.username %></h2>
+<h2><%= @user.username %> (<%= @user.user_type %>)</h2>
 <% if @user.image %>
   <img class="media-object" src="<%= @user.image %>" alt="<%= @user.username %>'s image">
 <% else %>
   <img class="media-object" src="/images/default.png" alt="<%= @user.username %>'s image">
 <% end %>
+<br>
 <p>full name: <%= @user.first_name %> <%= @user.last_name %></p>
 
 <p>email: <%= @user.email %></p>
-<p>user_type: <%= @user.user_type %></p>
 <p>bio: <%= @user.bio %></p>
 
 <p>my walls: <%= @user.walls %></p>
