--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,4 +4,6 @@ body { background-color: #FCFCFC; }
 
 #property-map { height: 600px; margin: 20px 0; }
 
+img { width: 240px; height: 240px; }
+
 /*# sourceMappingURL=style.css.map */
