--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -6,7 +6,7 @@
   <input type="text" name="search" placeholder="Search" value="<%= params[:search] %>" class="form-control">
   <button class="btn btn-primary" id="search_button">Go</button>
   <a href="/walls" class="btn btn-primary" role="button" id="back_search_button"> Back to all walls </a>
-</form>
+</form><br><br>
 
 <div class="row">
   <% @walls.each do |wall| %>
