--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -13,9 +13,6 @@
 <p>artist is: <%= @wall.artist_id %></p>
 
 <p>my artist and owner! (link profile pics to both here): <%= @wall.owner_id %></p>
-<p> add a paint me button here which sets the artist_id field of wall table to the current user. will only work once logic is in place which shows artist/owners diff pages - so efffectivly only artists can click </p>
-
-<p>show wall owner and have a link to their email / email them</p>
 
 <% if current_user.user_type == "wall_owner" %>
 <p><strong><a href="/walls/<%=@wall.id %>/edit">edit/update this wall</a></strong></p>
@@ -25,6 +22,8 @@
   <input type="submit" value="delete">
 </form>
 
+<% else %>
+<p><strong><a href="mailto:<%=@user.email%>?Subject=i'd like to paint your wall" id="email_form">&lt; request to paint this wall &gt;</a></strong></p>
 <% end %>
 
 
