--- a/app/views/walls/completed_walls.erb
+++ b/app/views/walls/completed_walls.erb
@@ -1,13 +1,8 @@
 <div class="container-fluid">
 
 
-  <h1>completed walls area</h1>
+  <h1 class="page-header">completed walls area</h1>
 
-  <p>logic required to determine if is_painted field is true (when paint me button clicked) then only is displayed here</p>
-
-  <p>left/right arrows to cycle through completed walls. would be awesome to have cards which when howvered on revealed more info. click on wall to take you to its full page (walls/show)</p>
-
-  <img src = "http://amusingearth.com/wp-content/uploads/2014/06/Street-Art-Masterpieces-20.jpg" width="500px">
 
 
     <div class="row">
