--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -13,7 +13,7 @@
 
     <% if !(wall.owner_id.present? && wall.artist_id.present?) %>
 
-    <div class="col-md-4">
+    <div class="col-xs-12 col-md-4">
         <ul class="media-list">
           <li class="media">
             <div class="media-left">
