--- a/app/views/walls/new.erb
+++ b/app/views/walls/new.erb
@@ -10,22 +10,22 @@
 
   <div class="form-group">
     <label for="address1">address1</label>
-    <input name="wall[address1]" type="text" class="form-control" id="address1" placeholder="address1">
+    <input name="wall[address1]" type="text" class="form-control address" id="address1" placeholder="address1">
   </div>
 
   <div class="form-group">
     <label for="address2">address2</label>
-    <input name="wall[address2]" type="text" class="form-control" id="address2" placeholder="address2">
+    <input name="wall[address2]" type="text" class="form-control address" id="address2" placeholder="address2">
   </div>
 
   <div class="form-group">
     <label for="city">city</label>
-    <input name="wall[city]" type="text" class="form-control" id="city" placeholder="city">
+    <input name="wall[city]" type="text" class="form-control address" id="city" placeholder="city">
   </div>
 
   <div class="form-group">
     <label for="postcode">postcode</label>
-    <input name="wall[postcode]" type="text" class="form-control" id="postcode" placeholder="postcode">
+    <input name="wall[postcode]" type="text" class="form-control address" id="postcode" placeholder="postcode">
   </div>
 
   <div class="form-group">
