another one bites the dust

--- a/app/views/walls/edit.erb
+++ b/app/views/walls/edit.erb
@@ -39,7 +39,7 @@
   <div class="form-group">
   <label for="artist_id">artist</label>
     <select name="wall[artist_id]">
-      <option value="#" selected>----</option>
+      <option value="" selected>no artist selected</option>
         <% @users.each do |user| %>
           <% if user.user_type == "artist" %>
           <option value="<%= user.id %>"><%= user.username %></option> 
