--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="media-body">
               <a href="/walls/<%= wall.id %>">
-                <img src="<%= wall.image %>" width="440px">
+                <img src="<%= wall.image %>" width="100%">
               </a>
               <%= wall.city %>
             </div>
