saving before experimenting with changing image proprties

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -69,5 +69,10 @@
       <%= styled_flash %>
       <%= yield %>
     <main>
+
+<footer class="panel-footer">
+      this site was created by jasel chauhan
+</footer>
+
   </body>
 </html>
