--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -1,6 +1,8 @@
-<div class="jumbotron">
-  <h1>welcome to sparewall</h1>
-  <p>this is a friendly place which connects people who have spare walls in need of color and artists that wanna paint. no money is exchanged here; this place runs on good vibes. find out more below. this is just a placeholder - consider real style later on </p>
-  <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more</a></p>
-  <p><a class="btn btn-primary btn-lg" href="/register" role="button">sign up</a></p>
-</div>
+<body class ="homepage-body">
+  <div class="jumbotron">
+    <h1 id="main-title-header">sparewall</h1>
+    <p>connects people with spare walls with those who like to paint walls</p>
+    <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more</a>
+    <a class="btn btn-primary btn-lg" href="/register" role="button">sign up</a></p>
+  </div>
+</body>
