--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -15,8 +15,8 @@
 
     <div class="col-xs-12 col-md-4">
         <ul class="media-list">
-          <li class="media">
-            <div class="media-left">
+          <li class="media-left">
+            <div>
               <a href="/walls/<%= wall.id %>">
               </a>
             </div>
@@ -24,7 +24,7 @@
               <a href="/walls/<%= wall.id %>">
                 <img src="<%= wall.image %>" width="100%">
               </a>
-              <%= wall.city %>
+              <p><%= wall.city %><p>
             </div>
           </li>
           </ul>
@@ -35,5 +35,7 @@
 </div>
 
 </div>
+
+
 
 
